--- a/css/_header.scss
+++ b/css/_header.scss
@@ -2,9 +2,10 @@ header {
     position: sticky;
     top: 0;
     background-color: #ffffff;
+    z-index: 999;
     .navBar {
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         padding-top: 10px;
         padding-bottom: 10px;
         box-shadow: 0px 2px 4px 0px rgb(73, 72, 72);
