--- a/css/_welcome.scss
+++ b/css/_welcome.scss
@@ -3,7 +3,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     object-fit: cover;
-    height: 90vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -92,6 +92,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-bottom: 50px;
         p { 
             font-family: "CompassSerif-Regular";
             font-style: italic;
