--- a/css/_header.scss
+++ b/css/_header.scss
@@ -3,9 +3,14 @@ header {
     top: 0;
     background-color: #ffffff;
     z-index: 999;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
     .navBar {
+        width: 100%;
         display: flex;
-        justify-content: space-between;
+        flex-wrap: wrap;
+        justify-content: center;
         padding-top: 10px;
         padding-bottom: 10px;
         box-shadow: 0px 2px 4px 0px rgb(73, 72, 72);
@@ -14,6 +19,7 @@ header {
             display: flex;
             justify-content: left;
             align-items: center;
+            flex-wrap: wrap;
 
             
             .navBar__thumb {
