Agregando los estilos de la sección Discover

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -4,8 +4,9 @@ header {
     background-color: #ffffff;
     z-index: 999;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-wrap: wrap;
+    width: 100%;
     .navBar {
         width: 100%;
         display: flex;
