--- a/css/styles.css
+++ b/css/styles.css
@@ -29,8 +29,9 @@ header {
   background-color: #ffffff;
   z-index: 999;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   flex-wrap: wrap;
+  width: 100%;
 }
 header .navBar {
   width: 100%;
@@ -433,4 +434,161 @@ header .navBar .navBar__contenidoNav .navBar__info .navBar__links .navBar__listL
   background-color: #000000;
   color: #ffffff;
   transition: all 0.3s ease-in-out;
+}
+
+.discover {
+  padding: 100px;
+  display: flex;
+  justify-content: flex-start;
+}
+.discover .discover__container {
+  display: flex;
+  /* justify-content: space-between; */
+  align-items: center;
+  max-width: 1200px;
+  position: relative;
+  width: 90%;
+  margin: auto;
+}
+.discover .discover__container .discover__text {
+  width: 40%;
+}
+.discover .discover__container .discover__text .discover__title {
+  font-family: "CompassDisplay-Regular";
+  font-style: italic;
+  font-size: 35px;
+  font-weight: 300;
+  /* margin-bottom: 30px; */
+}
+.discover .discover__container .discover__text .discover__subtitle {
+  font-family: "CompassSans-Regular";
+  font-weight: 600;
+  display: inline-block;
+  margin-bottom: 30px;
+}
+.discover .discover__container .discover__text .discover__description {
+  font-family: "CompassSans-Regular";
+  font-weight: 300;
+  text-align: justify;
+  margin-right: 35px;
+  margin-bottom: 15px;
+  line-height: 23px;
+}
+.discover .discover__container .discover__text .discover__btn .discover__allNeighborhoods {
+  font-family: "CompassSans-Regular";
+  text-decoration: none;
+  display: inline-block;
+  padding: 15px 25px;
+  background-color: #000;
+  border: 2px solid transparent;
+  color: #fff;
+}
+.discover .discover__container .discover__text .discover__btn .discover__allNeighborhoods:hover {
+  border-color: #000;
+  color: #000;
+  background-color: #fff;
+  transition: all 0.3s ease-in-out;
+}
+.discover .discover__container .discover__wrapper {
+  display: flex;
+  width: 50%;
+  /* overflow: hidden; */
+}
+.discover .discover__container .discover__wrapper .discover__cardImg {
+  width: 350px;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-evenly; */
+  align-items: center;
+  position: relative;
+  margin-right: 30px;
+}
+.discover .discover__container .discover__wrapper .discover__cardImg .discover__cardBox {
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+.discover .discover__container .discover__wrapper .discover__cardImg .discover__cardBox .discover__thumb {
+  width: 350px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.discover .discover__container .discover__wrapper .discover__cardImg .discover__cardBox .discover__descriptionImg {
+  color: #fff;
+  display: inline-block;
+  position: absolute;
+  text-align: center;
+  font-family: "CompassSans-Regular";
+  font-size: 300;
+  line-height: 15px;
+  padding: 50px;
+  transform: translateY(30px);
+  opacity: 0;
+  visibility: hidden;
+}
+.discover .discover__container .discover__wrapper .discover__cardImg .discover__cardBox:hover .discover__descriptionImg {
+  transform: translateY(0px);
+  opacity: 1;
+  transition: all 0.3s ease-in-out;
+  visibility: visible;
+  cursor: pointer;
+}
+.discover .discover__container .discover__wrapper .discover__cardImg .discover__cardBox:hover .discover__thumb {
+  filter: brightness(50%);
+  transform: scale(1.1);
+  transition: all 0.3s linear;
+}
+.discover .discover__container .discover__wrapper .discover__cardImg .discover__nameImg {
+  display: flex;
+  align-self: flex-start;
+  margin-top: 10px;
+}
+.discover .discover__container .discover__wrapper .discover__cardImg .discover__nameImg .discover__name {
+  font-family: "CompassSans-Regular";
+  font-size: 300;
+}
+.discover .discover__container .discover__buttons {
+  position: absolute;
+  display: flex;
+  z-index: 10;
+  bottom: 50px;
+  left: 425px;
+}
+.discover .discover__container .discover__buttons .discover__left {
+  padding: 20px;
+  background: none;
+  border: none;
+  background-color: #000;
+  border: 2px solid transparent;
+  color: #fff;
+  cursor: pointer;
+}
+.discover .discover__container .discover__buttons .discover__left:hover {
+  background-color: #fff;
+  border-color: #000;
+  color: #000;
+  transition: all 0.3s ease-in-out;
+}
+.discover .discover__container .discover__buttons .discover__left i {
+  font-size: 1.1rem;
+}
+.discover .discover__container .discover__buttons .discover__right {
+  padding: 20px;
+  background: none;
+  border: none;
+  background-color: #000;
+  border: 2px solid transparent;
+  color: #fff;
+  cursor: pointer;
+}
+.discover .discover__container .discover__buttons .discover__right:hover {
+  background-color: #fff;
+  border-color: #000;
+  color: #000;
+  transition: all 0.3s ease-in-out;
+}
+.discover .discover__container .discover__buttons .discover__right i {
+  font-size: 1.1rem;
 }/*# sourceMappingURL=styles.css.map */
