--- a/css/_lifestyle.scss
+++ b/css/_lifestyle.scss
@@ -3,28 +3,35 @@
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
-    justify-content: flex-start;
+    justify-content:space-between;
     position: relative;
+    overflow: hidden;
     
-    .lifestyle__yatch {
-        display: inline-block;
-        width: 100%;
+    .lifestyle__yacht {
+        display: inline-flex;
+        align-self: center;
+        width: 30%;
         position: absolute;
-        z-index: 10;
+        left: 0;
+        /* z-index: 10; */
+        margin-bottom: 100px;
     }
     
     .lifestyle__text {
         max-width: 1200px;
         background-color: #fff;
-        height: auto;
-        margin: 50px 50px 50px 0;
-        padding: 50px;
+        /* height: auto; */
+        margin: 100px auto;
+        padding: 100px 100px 100px 200px;
         display: flex;
+        /* position: absolute; */
+        left: 40%;
 
         .lifestyle__containerMainText {
             display: flex;
             flex-direction: column;
             justify-content: center;
+            flex-wrap: wrap;
             width: 50%;
 
             .lifestyle__title {
@@ -56,7 +63,7 @@
                 color: #fff;
                 border: 2px solid transparent;
                 padding: 10px 20px;
-                width: 50%;
+                width: 70%;
                 margin-top: 25px;
                 &:hover {
                     border-color: #000;
@@ -91,6 +98,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
+            flex-wrap: wrap;
             position: relative;
 
             .lifestyle__cardImg {
@@ -98,6 +106,11 @@
 
                 .lifestyle__thumb {
                     width: 100%;
+                }
+
+                .lifestyle__descriptionImg {
+                    font-family: "CompassSans-Regular";
+                    margin-top: 10px;
                 }
             }
 
