Agregando los estilos a la sección Testimonials

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -87,7 +87,6 @@ header {
                                 }
                             }
 
-                            
                             a {
                                 text-decoration: none;
                                 color: #000;
@@ -108,7 +107,10 @@ header {
                                 i { color: #ffffff; }
                             }
 
-                            i { font-size: 14px; }
+                            i {
+                                font-size: 14px;
+                                color: #000;
+                            }
                         }
 
                         .navBar__link--button {
