--- a/css/styles.css
+++ b/css/styles.css
@@ -1137,4 +1137,89 @@ header .navBar .navBar__contenidoNav .navBar__info .navBar__links .navBar__listL
   color: #000;
   background-color: #fff;
   transition: all 0.3s ease-in-out;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  max-width: 1200px;
+  margin: 50px auto;
+}
+.footer .footer__logoFooter {
+  display: flex;
+  justify-content: flex-start;
+}
+.footer .footer__infoFooter {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 25px 0 25px 0;
+}
+.footer .footer__infoFooter .footer__group .footer__title {
+  font-family: "CompassSans-Regular";
+  color: #333333;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+.footer .footer__infoFooter .footer__group .footer__list .footer__item {
+  list-style: none;
+  font-family: "CompassSans-Regular";
+  margin-bottom: 5px;
+  border-bottom: 2px solid transparent;
+}
+.footer .footer__infoFooter .footer__group .footer__list .footer__item:hover {
+  border-color: #333333;
+  transition: all 0.3s ease-in-out;
+}
+.footer .footer__infoFooter .footer__group .footer__list .footer__item a {
+  text-decoration: none;
+  color: #333333;
+}
+.footer .footer__compass {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 25px 0;
+}
+.footer .footer__compass .footer__socialMedias .footer__listSocialMedias {
+  display: flex;
+  list-style: none;
+}
+.footer .footer__compass .footer__socialMedias .footer__listSocialMedias .footer__socialMedia {
+  margin-right: 20px;
+}
+.footer .footer__details {
+  font-family: "CompassSans-Regular";
+  color: #333333;
+  font-size: 0.7rem;
+  text-align: justify;
+  font-weight: 600;
+  line-height: 15px;
+  margin-bottom: 25px;
+}
+.footer .footer__terms {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer .footer__terms .footer__listFooter {
+  display: flex;
+  justify-content: space-evenly;
+  list-style: none;
+}
+.footer .footer__terms .footer__listFooter .footer__term {
+  padding-right: 20px;
+  font-family: "CompassSans-Regular";
+}
+.footer .footer__terms .footer__listFooter .footer__term a {
+  text-decoration: none;
+  color: #333333;
+  text-align: center;
+  border-bottom: 2px solid transparent;
+}
+.footer .footer__terms .footer__listFooter .footer__term a:hover {
+  border-color: #333333;
+  transition: all 0.3s ease-in-out;
+}
+.footer .footer__terms .footer__realtor .footer__thumbRealtor {
+  transform: scale(0.75);
 }/*# sourceMappingURL=styles.css.map */
