--- a/css/_header.scss
+++ b/css/_header.scss
@@ -7,11 +7,12 @@ header {
     justify-content: center;
     flex-wrap: wrap;
     width: 100%;
+
     .navBar {
         width: 100%;
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
+        justify-content: space-around;
         padding-top: 10px;
         padding-bottom: 10px;
         box-shadow: 0px 2px 4px 0px rgb(73, 72, 72);
@@ -41,6 +42,17 @@ header {
             
         }
         
+        .navBar__hamburguer {
+            display: flex;
+            align-items: center;
+            visibility: hidden;
+            cursor: pointer;
+            font-size: 3rem;
+            @media screen and (max-width: 1474px) {
+                visibility: visible;
+            }
+        }
+
         .navBar__contenidoNav {
             display: flex;
             justify-content: space-between;
@@ -136,6 +148,9 @@ header {
                         }
                     }
                 }
+            }
+            @media screen and (max-width: 1474px) {
+                display: none;
             }
         }
     }
