--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ header .navBar {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
   padding-top: 10px;
   padding-bottom: 10px;
   box-shadow: 0px 2px 4px 0px rgb(73, 72, 72);
@@ -62,6 +62,18 @@ header .navBar .navBar__logosNav .navBar__thumb {
           top: 10px;
       }
   } */
+}
+header .navBar .navBar__hamburguer {
+  display: flex;
+  align-items: center;
+  visibility: hidden;
+  cursor: pointer;
+  font-size: 3rem;
+}
+@media screen and (max-width: 1474px) {
+  header .navBar .navBar__hamburguer {
+    visibility: visible;
+  }
 }
 header .navBar .navBar__contenidoNav {
   display: flex;
@@ -152,6 +164,11 @@ header .navBar .navBar__contenidoNav .navBar__info .navBar__links .navBar__listL
 header .navBar .navBar__contenidoNav .navBar__info .navBar__links .navBar__listLinks .navBar__link--button a {
   text-decoration: none;
   color: #ffffff;
+}
+@media screen and (max-width: 1474px) {
+  header .navBar .navBar__contenidoNav {
+    display: none;
+  }
 }
 
 .welcome {
