--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,16 @@ header .navBar .navBar__logosNav .navBar__thumb {
       }
   } */
 }
+@media screen and (max-width: 510px) {
+  header .navBar .navBar__logosNav .navBar__thumb {
+    transform: scale(0.7);
+  }
+}
+@media screen and (max-width: 480px) {
+  header .navBar .navBar__logosNav .navBar__thumb {
+    transform: scale(0.5);
+  }
+}
 header .navBar .navBar__hamburguer {
   display: flex;
   align-items: center;
@@ -217,6 +227,17 @@ header .navBar .navBar__contenidoNav .navBar__info .navBar__links .navBar__listL
   display: flex;
   justify-content: space-around;
 }
+@media screen and (max-width: 525px) {
+  .welcome .welcome__btns {
+    flex-direction: column;
+    width: 470px;
+  }
+}
+@media screen and (max-width: 380px) {
+  .welcome .welcome__btns {
+    width: 385px;
+  }
+}
 .welcome .welcome__btns .welcome__buyers {
   /* MIXINS */
   background: none;
@@ -230,6 +251,11 @@ header .navBar .navBar__contenidoNav .navBar__info .navBar__links .navBar__listL
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 }
+@media screen and (max-width: 525px) {
+  .welcome .welcome__btns .welcome__buyers {
+    margin: 15px;
+  }
+}
 .welcome .welcome__btns .welcome__sellers {
   /* MIXINS */
   background: none;
@@ -242,6 +268,11 @@ header .navBar .navBar__contenidoNav .navBar__info .navBar__links .navBar__listL
   color: #000;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
+}
+@media screen and (max-width: 525px) {
+  .welcome .welcome__btns .welcome__sellers {
+    margin: 15px;
+  }
 }
 .welcome .welcome__form {
   display: flex;
@@ -263,6 +294,16 @@ header .navBar .navBar__contenidoNav .navBar__info .navBar__links .navBar__listL
 }
 .welcome .welcome__form .welcome__searchBar::placeholder {
   color: #000;
+}
+@media screen and (max-width: 525px) {
+  .welcome .welcome__form .welcome__searchBar {
+    width: 290px;
+  }
+}
+@media screen and (max-width: 380px) {
+  .welcome .welcome__form .welcome__searchBar {
+    width: 205px;
+  }
 }
 .welcome .welcome__form .welcome__btnSearch {
   width: 50px;
@@ -331,14 +372,69 @@ header .navBar .navBar__contenidoNav .navBar__info .navBar__links .navBar__listL
   justify-content: space-between;
   position: relative;
 }
+@media screen and (max-width: 1380px) {
+  .exclusiveListings .exclusiveListings__imgs {
+    flex-direction: column;
+  }
+}
 .exclusiveListings .exclusiveListings__imgs .exclusiveListings__img {
   margin: 0 20px;
   position: relative;
+}
+@media screen and (max-width: 1380px) {
+  .exclusiveListings .exclusiveListings__imgs .exclusiveListings__img {
+    margin: 20px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .exclusiveListings .exclusiveListings__imgs .exclusiveListings__img {
+    margin: 10px;
+  }
 }
 .exclusiveListings .exclusiveListings__imgs .exclusiveListings__img .exclusiveListings__thumb {
   margin: 0 auto;
   width: 650px;
   filter: brightness(75%);
+}
+@media screen and (max-width: 1380px) {
+  .exclusiveListings .exclusiveListings__imgs .exclusiveListings__img .exclusiveListings__thumb {
+    width: 930px;
+  }
+}
+@media screen and (max-width: 975px) {
+  .exclusiveListings .exclusiveListings__imgs .exclusiveListings__img .exclusiveListings__thumb {
+    width: 770px;
+  }
+}
+@media screen and (max-width: 805px) {
+  .exclusiveListings .exclusiveListings__imgs .exclusiveListings__img .exclusiveListings__thumb {
+    width: 670px;
+  }
+}
+@media screen and (max-width: 750px) {
+  .exclusiveListings .exclusiveListings__imgs .exclusiveListings__img .exclusiveListings__thumb {
+    width: 550px;
+  }
+}
+@media screen and (max-width: 580px) {
+  .exclusiveListings .exclusiveListings__imgs .exclusiveListings__img .exclusiveListings__thumb {
+    width: 475px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .exclusiveListings .exclusiveListings__imgs .exclusiveListings__img .exclusiveListings__thumb {
+    width: 430px;
+  }
+}
+@media screen and (max-width: 460px) {
+  .exclusiveListings .exclusiveListings__imgs .exclusiveListings__img .exclusiveListings__thumb {
+    width: 370px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .exclusiveListings .exclusiveListings__imgs .exclusiveListings__img .exclusiveListings__thumb {
+    width: 300px;
+  }
 }
 .exclusiveListings .exclusiveListings__imgs .exclusiveListings__img .exclusiveListings__textImg {
   position: absolute;
